# openscp-fork

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  README_ES.md
assets/linux/: openscp_snap.desktop
core/: CMakeLists.txt
core/include/openscp/: Libssh2SftpClient.hpp  Log.hpp  MockSftpClient.hpp  SftpClient.hpp  SftpTypes.hpp
core/src/libssh2/: Libssh2SftpClient.cpp
core/src/mock/: MockSftpClient.cpp
docs/: ABOUT_LIBRARIES_EN.txt  ABOUT_LIBRARIES_ES.txt  LICENSING.md
docs/credits/: CREDITS.md  LGPL_COMPLIANCE.md
docs/credits/LICENSES/: libssh2-BSD-3-Clause.txt
src/openscp_ts/: openscp_en.ts  openscp_es.ts
translations/: openscp_en.ts  openscp_es.ts
ui/: AboutDialog.cpp  AboutDialog.hpp  ConnectionDialog.cpp  ConnectionDialog.hpp  MainWindow.cpp  MainWindow.hpp  PermissionsDialog.cpp  PermissionsDialog.hpp  RemoteModel.cpp  RemoteModel.hpp  SecretStore.cpp  SecretStore.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SiteManagerDialog.cpp  SiteManagerDialog.hpp  TransferManager.cpp  TransferManager.hpp  TransferQueueDialog.cpp  TransferQueueDialog.hpp  main.cpp
